# magiskboot-rs

./: .gitignore  Cargo.toml  README.md
crates/base/: Cargo.toml
crates/base/src/: cstr.rs  files.rs  lib.rs  logging.rs  misc.rs  result.rs
crates/boot/: Cargo.toml  build.rs
crates/boot/cpp/: bootimg.cpp  magiskboot.hpp
crates/boot/cpp.archive/: base.hpp  boot-rs.hpp  bootimg.hpp  wrapper.cpp
crates/boot/proto/: mod.rs  update_metadata.rs
crates/boot/src/: cli.rs  compat.rs  compress.rs  cpio.rs  dtb.rs  extern_c.rs  ffi.rs  format.rs  lib.rs  main.rs  patch.rs  payload.rs  sign.rs
crates/boot/src/bootimg/: hdr.rs  mod.rs  repack.rs  split.rs  unpack.rs
crates/derive/: Cargo.toml
crates/derive/src/argh/: mod.rs
